--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "react-supabase",
-    "version": "0.2.0",
+    "name": "@bdepascale/react-supabase-18",
+    "version": "0.5.0",
     "description": "React Hooks library for Supabase",
     "main": "./dist/index.cjs.js",
     "module": "./dist/index.es.js",
@@ -13,7 +13,10 @@
     "files": [
         "dist/**"
     ],
-    "repository": "tmm/react-supabase",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/tmm/react-supabase.git"
+    },
     "homepage": "https://react-supabase.vercel.app",
     "license": "MIT",
     "scripts": {
@@ -57,8 +60,8 @@
         "jest-watch-typeahead": "^0.6.5",
         "lint-staged": "^10.5.4",
         "prettier": "^2.4.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
         "rimraf": "^3.0.2",
         "size-limit": "^4.12.0",
         "ts-jest": "^26.5.5",
@@ -66,5 +69,13 @@
         "typescript": "^4.4.4",
         "vite": "^2.6.13",
         "vite-plugin-dts": "^0.5.3"
-    }
+    },
+    "bugs": {
+        "url": "https://github.com/tmm/react-supabase/issues"
+    },
+    "directories": {
+        "doc": "docs",
+        "test": "test"
+    },
+    "author": ""
 }
